--- a/web_client/src/app/components/navbar/navbar.component.html
+++ b/web_client/src/app/components/navbar/navbar.component.html
@@ -21,6 +21,16 @@
             </form>
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a *ngIf="!web3service.isLogged()">
+                        <button class="btn btn--small" (click)="web3service.login()">Login using Metamask</button>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a *ngIf="web3service.isLogged()">
+                        <button class="btn btn--small" (click)="web3service.logout()">Logout using Metamask</button>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0)">
                         <i class="material-icons">dashboard</i>
                         <p>
