--- a/web_client/src/app/layouts/verifier-layout/verifier-layout.component.html
+++ b/web_client/src/app/layouts/verifier-layout/verifier-layout.component.html
@@ -1,1 +1,7 @@
-<p>verifier-layout works!</p>
+<!-- Top navbar -->
+<app-navbar></app-navbar>
+<!-- Pages -->
+<router-outlet></router-outlet>
+<div class="container-fluid">
+  <app-footer></app-footer>
+</div>
