Implement main vues
Signed-off-by: MedAliMarz <servfrdali@yahoo.fr>

--- a/web_client/src/app/components/navbar/navbar.component.html
+++ b/web_client/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,51 @@
-<nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute fixed-top">
+
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        
+      <img class="navbar-img" src='assets/img/insatlogo.png'>
+        
+        <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            
+            <ul class="navbar-nav">
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0)">
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0)">
+                        About
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0)">
+                        Guide
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0)">
+                        <i class="material-icons">github</i>
+                        Github
+                    </a>
+                </li>
+
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="javascript:void(0)">
+                        <i class="material-icons">person</i>
+                        
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!--
+    <nav class="navbar navbar-expand-lg navbar-transparent">
     <div class="container-fluid">
         <div class="navbar-wrapper">
-          <a class="navbar-brand" href="javascript:void(0)">{{getTitle()}}</a>
+          <a class="navbar-brand" href="javascript:void(0)"><img src='assets/insatlogo.png'></a>
         </div>
         <button mat-raised-button class="navbar-toggler" type="button" (click)="sidebarToggle()">
             <span class="sr-only">Toggle navigation</span>
@@ -67,6 +111,8 @@
     </div>
 </nav>
 
+
+-->
 <!--
 
 <nav class="navbar navbar-transparent navbar-absolute">
