--- a/web_client/src/app/layouts/student-layout/pages/diploma-request/diploma-request.component.html
+++ b/web_client/src/app/layouts/student-layout/pages/diploma-request/diploma-request.component.html
@@ -1,1 +1,29 @@
-<p>diploma-request works!</p>
+<h4 mat-dialog-title>Request a new Diploma</h4>
+<mat-dialog-content class="mat-typography">
+  <form>
+    <mat-form-field >
+        <mat-select matInput placeholder="Choose the diploma issuer">
+            <mat-option>1</mat-option>
+            <mat-option>2</mat-option>
+            <mat-option>3</mat-option>
+            <mat-option>4</mat-option>
+            <mat-option>5</mat-option>
+            <mat-option>6</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-select matInput placeholder="Choose the diploma">
+            <mat-option>1</mat-option>
+            <mat-option>2</mat-option>
+            <mat-option>3</mat-option>
+            <mat-option>4</mat-option>
+            <mat-option>5</mat-option>
+            <mat-option>6</mat-option>
+        </mat-select>
+      </mat-form-field>
+  </form>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-button class="btn btn-secondary" mat-dialog-close>Cancel</button>
+  <button mat-button class="btn btn-primary" [mat-dialog-close]="true" cdkFocusInitial>Request</button>
+</mat-dialog-actions>
