--- a/web_client/src/app/pages/landing/landing.component.html
+++ b/web_client/src/app/pages/landing/landing.component.html
@@ -1,6 +1,69 @@
 <!-- Top navbar -->
-<app-navbar></app-navbar>
-<p>landing works!</p>
-<div class="container-fluid">
-    <app-footer></app-footer>
-</div>
+    <main class="row main">
+            <p class="main-header">
+                Own your academic parcours, because you deserve it
+            </p>
+    </main>
+
+    <section class="row features">
+        <div class="col-md-4">
+            <div class="feature">
+                <span class="feature-img">
+                    <i class="material-icons"  >check_circle</i>
+                </span>
+                <h3 class="feature-title">
+                    Availability
+                </h3>
+                <p class="feature-description">
+                    The solution provide student with the ability to keep a digital record for theirs diploma,
+                    which reduce the risk related to paper based dipomas
+                </p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="feature">
+                <span class="feature-img">
+
+                    <i class="material-icons"  >fingerprint</i>
+
+                </span>
+                <h3 class="feature-title">
+                    Tracability
+                </h3>
+                <p class="feature-description">
+                    Using a digital diplomas wallet, the student can prove their well deserved diplomas and certificate.
+                    They can proove their hard work to future or potential employers
+                </p>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="feature">
+                <span class="feature-img">
+                    <i class="material-icons"  >grading</i>
+
+                </span>
+                <h3 class="feature-title">
+                    Verifiablity
+                </h3>
+                <p class="feature-description">
+                    The employees can verify the diploma of their candidate, providing them with a verifable proof and ensure them that they got a legit candidate 
+                </p>
+            </div>
+        </div>
+        
+    </section>
+    <section class="row usecases">
+
+        
+            <div class="usecase">
+                <h3 class="usecase-title">Digital diploma</h3>
+                <p class="usecase-para">The most pertinante use case is providing graduate with verifiable digital diplomas, it will enable them to share it with potential employee for background checking. Those employee can easily verify if they got a fake or a legit diploma making them more confident in their hiring decision</p>
+            </div>
+ 
+            <div class="usecase">
+                <h3 class="usecase-title">Non academic acitivites</h3>
+                <p class="usecase-para">Most of those student participate in certain clubs or groups for extracurricular acitivites, and they can get certificates for their achievement, which usually ends up in the trash. So having a verifable list of ceritifcate will increase future opporutnities for active students </p>
+            </div>
+        
+    </section>
+    
