--- a/web_client/src/app/app.component.html
+++ b/web_client/src/app/app.component.html
@@ -1,2 +1,6 @@
+<app-navbar></app-navbar>
+<div class="fluid-container">
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
