--- a/web_client/src/app/components/footer/footer.component.html
+++ b/web_client/src/app/components/footer/footer.component.html
@@ -1,33 +1,31 @@
-<footer class="footer ">
+<footer class="footer">
     <div class="container-fluid">
-        <nav class="pull-left">
+        <nav class="col-8-md mx-auto">
             <ul>
                 <li>
-                    <a href="https://www.creative-tim.com">
-                        Creative Tim
+                    <a href="">
+                        HOME
                     </a>
                 </li>
                 <li>
-                    <a href="https://creative-tim.com/about-us">
-                        About Us
+                    <a href="">
+                        ABOUT
                     </a>
                 </li>
                 <li>
-                    <a href="http://blog.creative-tim.com">
-                        Blog
+                    <a href="">
+                        GUIDE
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.creative-tim.com/license">
-                        Licenses
+                    <a href="">
+                        GITHUB
                     </a>
                 </li>
             </ul>
         </nav>
-        <div class="copyright pull-right">
-            &copy;
-            {{test | date: 'yyyy'}}, made with love by
-            <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+        <div class="copyright mx-auto">
+            &copy; 2020, All rights reserved for INSAT - TUNISIA
         </div>
     </div>
 </footer>
