--- a/web_client/src/app/layouts/student-layout/pages/dashboard/dashboard.component.html
+++ b/web_client/src/app/layouts/student-layout/pages/dashboard/dashboard.component.html
@@ -1,1 +1,34 @@
-<p>dashboard works!</p>
+<section class="row">
+
+  <div class="col-md-8 mx-auto">
+    <div class="card">
+      <div class="card-header card-header-success">
+        <h3 class="card-title pull-left">Received Verifiable Diploma</h3>
+        <button class="btn btn-primary btn-fab btn-round pull-right" (click)="openDialog()"><i class="material-icons"  >add</i></button>
+      </div>
+      <div id="diploma-list" class="card-body d-flex flex-row flex-wrap">
+        
+        <!-- to be changed to receive real stuff-->
+        <div class="card col-md-4 mx-4" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,20]">
+          <div class="card-header">
+            <h4 class="card-title">Diploma {{i}}</h4>
+            <p class="card-category">Category subtitle</p>
+          </div>
+          <div class="card-body">
+            Hooo
+          </div>
+        </div>
+      </div>
+      <!--  <div class="card-footer clearfix">
+        
+        <button mat-raised-button class="btn btn-primary pull-left">Issue</button>
+        <button mat-raised-button class="btn btn-fab btn-round pull-right">+</button>
+        
+      </div> -->
+    </div>
+  </div>
+  <div class="col-md-4">
+    <h3>Here comes a component where the user can change his details (if possible using the smart contract or we can ommit it)</h3>
+  </div>
+  
+</section>
