--- a/web_client/src/app/layouts/verifier-layout/verifier-layout.component.html
+++ b/web_client/src/app/layouts/verifier-layout/verifier-layout.component.html
@@ -1,7 +1,32 @@
-<!-- Top navbar -->
-<app-navbar></app-navbar>
-<!-- Pages -->
-<router-outlet></router-outlet>
-<div class="container-fluid">
-  <app-footer></app-footer>
-</div>
+<section class="row">
+  <div class="col-md-4">
+
+  </div>
+
+
+  <div class="col-md-8">
+
+
+
+    <div class="card">
+      <div class="card-header card-header-icon card-header-success">
+        <div class="card-icon">
+          <i class="material-icons">check_circle</i>
+        </div>
+        <h4 class="card-title">Verifiy a digital diploma</h4>
+      </div>
+      <div class="card-body">
+
+        <form>
+          <div class="form-group">
+            <input type="text" value="" placeholder="Regular" class="form-control" />
+        </div>
+        </form>
+        <button mat-raised-button class="btn btn-secondary">More details</button>
+        <button mat-raised-button class="btn btn-primary">Verify</button>
+      </div>
+    </div>
+
+    
+  </div>
+</section>
