--- a/web_client/src/app/layouts/verifier-layout/verifier-layout.component.html
+++ b/web_client/src/app/layouts/verifier-layout/verifier-layout.component.html
@@ -6,10 +6,8 @@
 
   <div class="col-md-8">
 
-
-
     <div class="card">
-      <div class="card-header card-header-icon card-header-success">
+      <div class="card-header card-header-icon card-header-info">
         <div class="card-icon">
           <i class="material-icons">check_circle</i>
         </div>
