--- a/web_client/src/app/layouts/admin-layout/pages/dashboard/dashboard.component.html
+++ b/web_client/src/app/layouts/admin-layout/pages/dashboard/dashboard.component.html
@@ -1,24 +1,26 @@
-<div class="row">
-</div>
+
 <div class="row">
   <div class="col-md-10 mx-auto">
     <div class="card">
-      <div class="card-header card-header-success">
-        <h3 class="card-title pull-left">Your Issued Diploma Collections</h3>
-        <button class="btn btn-primary btn-fab btn-round pull-right" (click)="openDialog()">
+      <div class="card-header card-header-info">
+        <h3 class="card-title pull-left">Your Issued Diploma Blueprint/Collection</h3>
+        <button class="btn btn-secondary btn-fab btn-round pull-right" (click)="openDialog()">
           <i class="material-icons">add</i>
         </button>
       </div>
-      <div id="diploma-list" class="card-body d-flex flex-row flex-wrap">
 
-        <!-- to be changed to receive real stuff-->
-        <div class="card col-md-4 mx-4" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,20]">
+      <!-- to be changed to receive real stuff-->
+      <div class="card-body" *ngIf="createdDiplomas.length==0">
+        You can add diploma blueprint
+      </div>
+      <div id="diploma-list" *ngIf="createdDiplomas.length!=0" class="card-body d-flex flex-row flex-wrap">
+        <div class="card col-md-4 mx-4" *ngFor="let diploma of createdDiplomas">
           <div class="card-header">
-            <h4 class="card-title">Diploma {{i}} Collection</h4>
-            <p class="card-category">Collection description</p>
+            <h4 class="card-title">{{diploma.title || 'N/A'}}</h4>
+            <p class="card-category">Establishement Chair : {{diploma.signature || 'N/A'}} </p>
           </div>
           <div class="card-body">
-            A
+            Establishement : {{diploma.university || 'N/A'}}
           </div>
         </div>
       </div>
