--- a/web_client/src/app/layouts/admin-layout/pages/diploma-issue/diploma-issue.component.html
+++ b/web_client/src/app/layouts/admin-layout/pages/diploma-issue/diploma-issue.component.html
@@ -3,25 +3,29 @@
 <section class="row">
     <div class="col-md-9 p-4">
       <div class="card">
-        <div class="card-header card-header-success">
+        <div class="card-header card-header-info">
           <h4 class="card-title pull-left">Issuing multiple or single digital diploma</h4>
           <button class="btn btn-secondary btn-fab btn-round pull-right" (click)="openDialog()"><i class="material-icons"  >add</i></button>
         </div>
         <div class="card-body">
-          <div class="card-content table-responsive table-full-width">
+          <div class="card-content" *ngIf="students.length===0">
+            <h3 class="mx-auto"> You can add diploma holders</h3>
+          </div>
+          <div class="card-content table-responsive table-full-width" *ngIf="students.length!=0">
             <table class="table">
               <thead class="text-primary">
+                <th>Blockchain Address</th>
                 <th>Name</th>
-                <th>Country</th>
-                <th>City</th>
-                <th>Salary</th>
+                <th>Diploma</th>
+                <th>Action</th>
+
               </thead>
               <tbody>
-                <tr>
-                  <td>Dakota Rice</td>
-                  <td>Niger</td>
-                  <td>Oud-Turnhout</td>
-                  <td class="text-danger">$36,738</td>
+                <tr *ngFor="let student of students">
+                  <td>{{ student.id }}</td>
+                  <td>{{ student.firstName ? student.firstName:'N/A'}}</td>
+                  <td>{{ 'diplomaId'}}</td>
+                  <button class="btn btn-danger btn-fab " (click)="deleteStudent(student.id)"><i class="material-icons">delete</i></button>
                 </tr>
               </tbody>
             </table>
@@ -29,7 +33,7 @@
         </div>
         <div class="card-footer align-end">
   
-          <button mat-raised-button class="btn btn-primary pull-left">Issue</button>
+          <button mat-raised-button class="btn btn-primary pull-right">Issue</button>
           
   
         </div>
@@ -43,4 +47,42 @@
   
     </div>
   </section>
-  
+
+<!-- this template is used as modal for adding a new diploma holder -->
+<ng-template #diplomaHolderModal let-data>
+
+    <h4 mat-dialog-title>Append new diploma holder</h4>
+  <mat-dialog-content class="mat-typography">
+    <form >
+      <mat-form-field>
+        <mat-label>Holder Address</mat-label>
+        <input matInput name="address" [(ngModel)]="data.address" placeholder="0xFF........AA" />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Choose Diploma</mat-label>
+        <mat-select matInput name="diplomaId" [(value)]="data.id" placeholder="Choose the diploma">
+          <mat-option value="1">1</mat-option>
+          <mat-option>2</mat-option>
+          <mat-option>3</mat-option>
+          <mat-option>4</mat-option>
+          <mat-option>5</mat-option>
+          <mat-option>6</mat-option>
+        </mat-select>
+      </mat-form-field>
+
+    </form>
+  </mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <button mat-button class="btn btn-secondary" mat-dialog-close>Cancel</button>
+    <button
+      mat-button
+      class="btn btn-primary"
+      [mat-dialog-close]="data"
+      cdkFocusInitial
+      
+    >
+      Add
+    </button>
+  </mat-dialog-actions>
+
+</ng-template>
