--- a/web_client/src/app/layouts/admin-layout/pages/student-list/student-list.component.html
+++ b/web_client/src/app/layouts/admin-layout/pages/student-list/student-list.component.html
@@ -1,1 +1,35 @@
-<p>student-list works!</p>
+
+<div class="row">
+    <div class="col-md-8 mx-auto">
+
+
+
+<div class="card">
+    <div class="card-header card-header-info">
+      <h4 class="card-title pull-left">Issued Student for specific diploma</h4>
+    </div>
+    <div class="card-body">
+        <div class="card-content" *ngIf="!students || students.length==0">
+            <h3>No issued diploma of this type</h3>
+        </div>
+      <div class="card-content table-responsive table-full-width" *ngIf="students.length!=0">
+        <table class="table">
+          <thead class="text-primary">
+            <th>Blockchain Address</th>
+            <th>Name</th>
+
+          </thead>
+          <tbody>
+            <tr *ngFor="let student of students">
+              <td>{{ student.id }}</td>
+              <td>{{ student.firstName ? student.firstName:'N/A'}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+</div>
