--- a/web_client/src/app/layouts/student-layout/pages/dashboard/dashboard.component.html
+++ b/web_client/src/app/layouts/student-layout/pages/dashboard/dashboard.component.html
@@ -2,13 +2,17 @@
 
   <div class="col-md-8 mx-auto">
     <div class="card">
-      <div class="card-header card-header-success">
+      <div class="card-header card-header-info">
         <h3 class="card-title pull-left">Received Verifiable Diploma</h3>
-        <button class="btn btn-primary btn-fab btn-round pull-right" (click)="openDialog()"><i class="material-icons"  >add</i></button>
+        <button class="btn btn-secondary btn-fab btn-round pull-right" (click)="openDialog()"><i class="material-icons"  >add</i></button>
       </div>
-      <div id="diploma-list" class="card-body d-flex flex-row flex-wrap">
+      
+      <app-diploma-list [diplomas]='[]'></app-diploma-list>
+      <!-- to be changed to receive real stuff-->
+      <!-- <div id="diploma-list" class="card-body d-flex flex-row flex-wrap">
         
-        <!-- to be changed to receive real stuff-->
+        <app-diploma class="col-md-4 mx-4" [diploma]="i" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,20]"></app-diploma>
+
         <div class="card col-md-4 mx-4" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,20]">
           <div class="card-header">
             <h4 class="card-title">Diploma {{i}}</h4>
@@ -18,7 +22,8 @@
             Hooo
           </div>
         </div>
-      </div>
+       </div> 
+      -->
       <!--  <div class="card-footer clearfix">
         
         <button mat-raised-button class="btn btn-primary pull-left">Issue</button>
