implemented business logic for admin's layout
integrated the services for the admin's layout components - updated diplomachain smart contract (added delete student fct)

--- a/web_client/src/app/layouts/admin-layout/pages/diploma-blueprint-create/diploma-blueprint-create.component.html
+++ b/web_client/src/app/layouts/admin-layout/pages/diploma-blueprint-create/diploma-blueprint-create.component.html
@@ -11,7 +11,7 @@
             <mat-label>Title</mat-label>
             <input matInput formControlName="title" placeholder="Ex. Eng diploma" >
           </mat-form-field>
-          <mat-form-field >
+          <!--<mat-form-field >
             <mat-label>Description</mat-label>
             <textarea matInput formControlName="description" placeholder="Ex. this diploma..."></textarea>
           </mat-form-field>
@@ -22,6 +22,18 @@
           <mat-form-field >
             <mat-label>Signature</mat-label>
             <input matInput formControlName="signature" placeholder="Ex. Mr. Foulen ben falten"/>
+          </mat-form-field>-->
+          <mat-form-field >
+            <mat-label>Owner</mat-label>
+            <input matInput formControlName="owner" placeholder="Ex. 0xrandomaddress"/>
+          </mat-form-field>
+          <mat-form-field >
+            <mat-label>Speciality</mat-label>
+            <input matInput formControlName="speciality" placeholder="Ex. Cybersecurity"/>
+          </mat-form-field>
+          <mat-form-field >
+            <mat-label>Honors</mat-label>
+            <input matInput formControlName="honors" placeholder="Ex. Academic"/>
           </mat-form-field>
           <mat-form-field >
             <mat-label>Logo url</mat-label>
@@ -43,17 +55,17 @@
         </div>
         <div class="diploma-body">
           <div class="diploma-content">
-            <h4>We Hereby Pronounce</h4>
+            <h4>We hereby congratulate our student</h4>
             <h2>Foulen Ben Falten</h2>
-            <h3>{{diplomaBlueprintForm.get('description').value ||  'For all efforts and hard work through the course'}}</h3>
+            <h3>For the successful completion of this certification</h3>
           </div>
           <div class="diploma-image">
-            <h3>{{diplomaBlueprintForm.get('university').value ||  'INSAT'}}</h3>
+            <h3>INSAT</h3>
             <img [src]="diplomaBlueprintForm.get('logo').value ||  'assets/img/insatlogo.png'"/>
           </div>
         </div>
         <div class="diploma-feet">
-          <h4>{{diplomaBlueprintForm.get('signature').value ||  'Mr. Samir Hamza'}}</h4>
+          <h4>Mr. Samir Hamza</h4>
           <h4>HASH</h4>
         </div>
       </div>
