--- a/web_client/src/app/layouts/admin-layout/pages/student-list/student-list.component.html
+++ b/web_client/src/app/layouts/admin-layout/pages/student-list/student-list.component.html
@@ -22,7 +22,7 @@
           <tbody>
             <tr *ngFor="let student of students">
               <td>{{ student.id }}</td>
-              <td>{{ student.firstName ? student.firstName:'N/A'}}</td>
+              <td>{{ student.fullName ? student.fullName:'N/A'}}</td>
             </tr>
           </tbody>
         </table>
