student layout business logic
linked the services to the student's layout components and to the verifier component.

--- a/web_client/src/app/layouts/admin-layout/pages/diploma-blueprint-create/diploma-blueprint-create.component.html
+++ b/web_client/src/app/layouts/admin-layout/pages/diploma-blueprint-create/diploma-blueprint-create.component.html
@@ -61,7 +61,7 @@
           </div>
           <div class="diploma-image">
             <h3>INSAT</h3>
-            <img [src]="diplomaBlueprintForm.get('logo').value ||  'assets/img/insatlogo.png'"/>
+            <img [src]="diplomaBlueprintForm.get('logo').value ||  'assets/img/insatlogo.png'">
           </div>
         </div>
         <div class="diploma-feet">
