--- a/web_client/src/app/layouts/student-layout/pages/dashboard/dashboard.component.html
+++ b/web_client/src/app/layouts/student-layout/pages/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
         <button class="btn btn-secondary btn-fab btn-round pull-right" (click)="openDialog()"><i class="material-icons"  >add</i></button>
       </div>
       
-      <app-diploma-list [diplomas]='[]'></app-diploma-list>
+      <app-diploma-list [diplomas]='diplomas'></app-diploma-list>
       <!-- to be changed to receive real stuff-->
       <!-- <div id="diploma-list" class="card-body d-flex flex-row flex-wrap">
         
