--- a/web_client/src/app/layouts/admin-layout/pages/diploma-issue/diploma-issue.component.html
+++ b/web_client/src/app/layouts/admin-layout/pages/diploma-issue/diploma-issue.component.html
@@ -31,7 +31,7 @@
             </table>
           </div>
         </div>
-        <div class="card-footer align-end">
+        <div class="card-footer">
   
           <button mat-raised-button class="btn btn-primary pull-right">Issue</button>
           
@@ -41,9 +41,7 @@
     </div>
     <div class="col-md-3">
 
-
-      <h2>here come the checlist animation component (hopefully)</h2>
-      <app-checklist></app-checklist>
+      <app-checklist [checkPoints]="checkPoints"></app-checklist>
   
     </div>
   </section>
