--- a/web_client/src/app/components/checklist/checklist.component.css
+++ b/web_client/src/app/components/checklist/checklist.component.css
@@ -1,42 +1,102 @@
 
-.step{
-    position: relative;
-    display: inline-block;
-}
-
 .step-list{
     list-style: none;
     margin: 0;
-    padding: 0;
-    display: inline-flex;
-    flex-direction: row;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    color: rgb(194, 194, 194);
+    align-items: center;
+    justify-items: center;
+}
+/* Vertical checklist*/
+.step{
+    position: relative;
+    align-items: center;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 100%;
+    background-color: rgb(194, 194, 194);
+    display: block;
+}
+.step>p {
+    position: absolute;
+    right: 3rem;
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+.step-last{
+    border-radius: 0;
+    clip-path:polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: -1rem;
+}
+.step-last>p{
+    right: 5rem;
+
+}
+.step-last>*{
+    color:whitesmoke;
+}
+.step-link{
+    background-color: rgb(194, 194, 194);
+    content: "";
+    display: block;
+    width:  0.8rem;
+    height: 4rem;
+    margin:   -1rem 0rem -1.1rem 0.6rem;
 }
 
-.step:before {
-    content: 'z';
+
+/*horiz checklist*/
+.horiz{
+    flex-direction: row;
+    list-style: none;
+    margin: 0;
+    padding: 1rem;
+    flex-direction: row;
+    align-items: center;
+    justify-items: center;
+}
+.horiz li {
+    display: inherit;
+}
+.horiz  .step {
     display: inline-block;
-    margin: 0 auto;
-    background:  rgb(194, 194, 194);
-    width: 3em;
-    height: 3em;
-    text-align: center; 
-    transform: translate(50%,0);
-    line-height: 3em;
-    border-radius: 100%;
-    position: relative;
-    z-index: 1000;
-  }
-  .step:after {
-    content: 'w';
-    position: relative;
-    display: inline-block;
-    background:  rgb(194, 194, 194);
-    width: 100%;
-    height: 0.5em;
-    z-index: -1;
-  }
-  .step:last-child:after{
-      display: none;
-  }
+}
+.horiz  .step > p{
+    right: 0rem;
+    bottom: 2rem;
+}
+.horiz .step-last{
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.horiz  .step-last > p{
+    bottom: 4rem;
+    
+}
+
+.horiz .step-link{
+    content: "";
+    width:  4rem;
+    height: 0.8rem;
+    margin : 0.6rem -1.1rem 0rem -1rem;
+}
+/* general */
+
+.step-done{
+    background: linear-gradient(60deg, #66bb6a, #43a047);
+}
+.step-link-done{
+    background-color: #66bb6a;
+}
