--- a/web_client/src/app/components/navbar/navbar.component.html
+++ b/web_client/src/app/components/navbar/navbar.component.html
@@ -65,13 +65,11 @@
             </form>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a *ngIf="!web3service.isLogged()">
-                        <button class="btn btn--small" (click)="web3service.login()">Login using Metamask</button>
-                    </a>
+                    <a *ngIf="!web3service.isLogged() [routerLink]="'/auth/login'" class="text-dark">Login</a>
                 </li>
                 <li class="nav-item">
                     <a *ngIf="web3service.isLogged()">
-                        <button class="btn btn--small" (click)="web3service.logout()">Logout using Metamask</button>
+                        <button class="btn btn--small" (click)="web3service.logout()">Logout</button>
                     </a>
                 </li>
                 <li class="nav-item">
