--- a/web_client/src/app/layouts/student-layout/pages/diploma-list/diploma-list.component.html
+++ b/web_client/src/app/layouts/student-layout/pages/diploma-list/diploma-list.component.html
@@ -1,15 +1,7 @@
 <div id="diploma-list" class="card-body d-flex flex-row flex-wrap">
-        
     <!-- to be changed to receive real stuff-->
-    <app-diploma class="col-md-4 mx-4" [diploma]="diploma" *ngFor="let diploma of diplomas"></app-diploma>
+    <h3 *ngIf="!diplomas  || diplomas==undefined || diplomas.length===0">Still didn't receive any diploma (you can request one)</h3>
 
-    <!-- <div class="card col-md-4 mx-4" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10,20]">
-      <div class="card-header">
-        <h4 class="card-title">Diploma {{i}}</h4>
-        <p class="card-category">Category subtitle</p>
-      </div>
-      <div class="card-body">
-        Hooo
-      </div>
-    </div> -->
+    <h5>{{diplomas}}</h5>
+    <app-diploma class="col-md-4 mx-4" [diploma]="diploma" *ngFor="let diploma of diplomas"></app-diploma>
   </div>
