Refactor smart contract & frontend code

--- a/web_client/src/app/layouts/admin-layout/pages/dashboard/dashboard.component.html
+++ b/web_client/src/app/layouts/admin-layout/pages/dashboard/dashboard.component.html
@@ -17,10 +17,10 @@
         <div class="card col-md-4 mx-4" *ngFor="let diploma of createdDiplomas">
           <div class="card-header">
             <h4 class="card-title">{{diploma.title || 'N/A'}}</h4>
-            <p class="card-category">Establishement Chair : {{diploma.signature || 'N/A'}} </p>
+            <p class="card-category">Establishement Chair : Samir Hamza </p>
           </div>
           <div class="card-body">
-            Establishement : {{diploma.university || 'N/A'}}
+            Establishement : Insat
           </div>
         </div>
       </div>
