--- a/web_client/src/app/layouts/auth-layout/pages/login/login.component.html
+++ b/web_client/src/app/layouts/auth-layout/pages/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="col-md-12">
+<div class="col-md-6 mx-auto">
     <div class="card">
-        <div class="card-header card-header-danger">
+        <div class="card-header card-header-info">
             <div class="row justify-content-center">
                 <h1 class="card-title">Welcome!</h1>
             </div>
